# matrix_bot

./: .gitignore  Cargo.toml  README.md  examplebots.json
examples/: autojoin.rs  commandbot.rs  login.rs
src/: admin.rs  cbot.rs  dice.rs  main.rs
