[package]
name = "matrix_bot"
version = "0.1.0"
authors = ["benni"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#matrix
matrix-sdk = { version = "*", path ="../matrix-rust-sdk/matrix_sdk/" }
tokio = { version = "1.0.2", features = ["full", "time"] }
url = "*"

#eigene Programmierung für Bot
rand = "*"
dotenv = "*"